# self_api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
ai-agent-chat/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
app/: __init__.py  main.py
docs/: api_examples.md  architecture.md  langgraph_min_prod.md  migration-from-n8n.md  n8n_nested_dataset_webhook_workflow.json  n8n_nested_dataset_workflow.json  pipeline-api.md  project-reference.md
tests/: conftest.py  data_helpers.py  generate_dataset1_strip_voc.py  subyolo  test_agent_api.py  test_agent_langgraph_pipeline_api.py  test_agent_long_run_api.py  test_agent_provider_client.py  test_annotate_visualize_api.py  test_api.py  test_auth_api.py  test_build_yolo_yaml_api.py  test_copy_path_api.py  test_discover_xml_classes_api.py  test_files_and_artifacts_api.py  test_healthz_api.py  test_move_path_api.py  test_nested_dataset_api.py  test_path_safety_api.py  test_pipeline_checkpointer_api.py  test_pipeline_graph_api.py  test_pipeline_sops_api.py  test_pipeline_sse_api.py  test_preprocess_async_callbacks_api.py  test_preprocess_async_endpoints_api.py  test_preprocess_request_aliases.py  test_publish_yolo_dataset_api.py  test_remote_sbatch_yolo_train_api.py  test_remote_transfer_api.py  test_reset_yolo_label_index_api.py  test_restore_voc_crops_batch_api.py  test_sliding_window_crop_api.py  test_sliding_window_crop_async_api.py  test_split_yolo_dataset_api.py  test_system_api_extended.py  (+13 more)
(+130 files in other folders)
